Fix no messages info spacing

--- a/src/scss/base/_properties.scss
+++ b/src/scss/base/_properties.scss
@@ -2,7 +2,9 @@
   --white: #fff;
   --primary: #03a9f4; //lightBlue
   --secondary: #7c4dff; // deepPurple[A200]
+
   --border-color: rgba(255, 255, 255, 0.1);
+  --border: 1px solid var(--border-color);
 
   --text-primary: var(--white);
   --text-secondary: rgba(255, 255, 255, 0.7);
